Fix paste not working in inputs on iOS PWA

--- a/src/index.css
+++ b/src/index.css
@@ -34,8 +34,7 @@ body {
   height: 100%;
   overflow: hidden;
   -webkit-tap-highlight-color: transparent;
-  -webkit-touch-callout: none;
-  user-select: none;
+  -webkit-touch-callout: default;
   /* Prevent text size adjust on orientation change */
   -webkit-text-size-adjust: 100%;
 }
@@ -57,6 +56,8 @@ body {
 
 input, select, textarea {
   user-select: text;
+  -webkit-user-select: text;
+  -webkit-touch-callout: default;
   font-size: 16px; /* Prevents iOS zoom on focus */
 }
 
